[gd_scene load_steps=38 format=3 uid="uid://bfhe57ypw3i5u"]

[ext_resource type="Theme" uid="uid://cmnrvs380oc6u" path="res://themes/os1_mono.tres" id="1_1b1c6"]
[ext_resource type="Script" uid="uid://dffmsepw35cgc" path="res://level/level.gd" id="2_1d7e5"]
[ext_resource type="Script" uid="uid://pjn5egmtl16x" path="res://desktop/desktop.gd" id="4_1b1c6"]
[ext_resource type="PackedScene" uid="uid://d4c8dtd2jia1d" path="res://file_system_items/document/document.tscn" id="4_7hnyc"]
[ext_resource type="Texture2D" uid="uid://cl68s7gfimstn" path="res://assets/images/a3k5lpwsn4gm7en71aa.png" id="4_euys8"]
[ext_resource type="PackedScene" uid="uid://bepushbvyj688" path="res://file_system_items/trash/trash.tscn" id="5_0vag3"]
[ext_resource type="PackedScene" uid="uid://dmf3a1es3sgi4" path="res://file_system_items/application/application.tscn" id="5_euys8"]
[ext_resource type="PackedScene" uid="uid://dpf8vobr127ok" path="res://info_window/info_window.tscn" id="6_1b1c6"]
[ext_resource type="PackedScene" uid="uid://wyj22wjeccw6" path="res://empty_trash_dialog/empty_trash_dialog.tscn" id="7_0vag3"]
[ext_resource type="Texture2D" uid="uid://dtr4u0h4ytgqk" path="res://assets/images/DocumentOS1@0.25x.png" id="7_2cq1c"]
[ext_resource type="PackedScene" uid="uid://byxkbllcqjjr3" path="res://file_system_items/folder/folder.tscn" id="8_euys8"]
[ext_resource type="Script" uid="uid://30qghlfcc1sv" path="res://fsm/state_machine.gd" id="8_k2s33"]
[ext_resource type="Script" uid="uid://0mcjqa8ciue7" path="res://level/states/asleep.gd" id="9_8yfpd"]
[ext_resource type="Texture2D" uid="uid://dmodkmrjwuepq" path="res://assets/images/os1/Godot.png" id="9_ijmkn"]
[ext_resource type="PackedScene" uid="uid://jr15xa6g2paw" path="res://menu_bar/menu_bar.tscn" id="9_jb3nm"]
[ext_resource type="Texture2D" uid="uid://5l2mhrbbq17" path="res://assets/images/os1/Film.png" id="10_ff102"]
[ext_resource type="Texture2D" uid="uid://ddh5nl5sdg2oi" path="res://assets/images/os1/Folder.png" id="11_0i82s"]
[ext_resource type="PackedScene" uid="uid://b27g4gvam75qu" path="res://file_system_items/installer/installer.tscn" id="12_k80li"]
[ext_resource type="AudioStream" uid="uid://dy6lng8qxlkt7" path="res://assets/audio/sfx/sfx_emptyTrash_lofi.wav" id="14_ksk6k"]
[ext_resource type="Texture2D" uid="uid://bntwmphhc0ty3" path="res://assets/images/os1/DocAsleep.png" id="14_sjly8"]
[ext_resource type="Texture2D" uid="uid://jj7byq0o2f4d" path="res://assets/images/os1/Disk.png" id="15_0pr33"]
[ext_resource type="AudioStream" uid="uid://caesi6x3j5l2" path="res://assets/audio/sfx/sfx_throwaway_lofi.wav" id="15_3bxrh"]
[ext_resource type="Texture2D" uid="uid://b6n405pem5m6s" path="res://assets/images/os1/Install.png" id="15_ff102"]
[ext_resource type="Texture2D" uid="uid://bykeujamftl7x" path="res://assets/images/os1/Calculator.png" id="16_vv70r"]
[ext_resource type="AudioStream" uid="uid://cfseyacgyg6np" path="res://assets/audio/sfx/click/sfx_click1.wav" id="17_2cq1c"]
[ext_resource type="Texture2D" uid="uid://djkaqc5gx5jh6" path="res://assets/images/os1/Paint.png" id="17_ijmkn"]
[ext_resource type="Texture2D" uid="uid://s8pp4fswsjmy" path="res://assets/images/os1/Calendar.png" id="17_pn3an"]
[ext_resource type="AudioStream" uid="uid://dfcq6vml3qd5y" path="res://assets/audio/sfx/sfx_startup_lofi.wav" id="18_aerqq"]
[ext_resource type="Texture2D" uid="uid://dixohqvwai1cg" path="res://assets/images/os1/Game.png" id="18_ijmkn"]
[ext_resource type="AudioStream" uid="uid://c1ah206sschrc" path="res://assets/audio/sfx/click/sfx_click2.wav" id="18_nl656"]
[ext_resource type="AudioStream" uid="uid://duglvfwhnr7qp" path="res://assets/audio/sfx/click/sfx_click3.wav" id="19_aerqq"]
[ext_resource type="AudioStream" uid="uid://wnfgdkip3462" path="res://assets/audio/sfx/click/sfx_click4.wav" id="20_k80li"]
[ext_resource type="AudioStream" uid="uid://l23hf5334bn1" path="res://assets/audio/sfx/sfx_droplet_hifi.wav" id="21_0i82s"]
[ext_resource type="PackedScene" uid="uid://cwrx8tafveswp" path="res://install_window/install_window.tscn" id="27_j6sx4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k2s33"]
texture = ExtResource("4_euys8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vag3"]
bg_color = Color(1, 1, 1, 1)
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_f1j2c"]
streams_count = 4
stream_0/stream = ExtResource("17_2cq1c")
stream_1/stream = ExtResource("18_nl656")
stream_2/stream = ExtResource("19_aerqq")
stream_3/stream = ExtResource("20_k80li")

[node name="OS1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1b1c6")
script = ExtResource("2_1d7e5")
os_version = 1.0
hard_drive_capacity = 40.0
required_space_for_install = 30.0
metadata/_edit_horizontal_guides_ = [191.0]

[node name="Desktop" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_k2s33")
script = ExtResource("4_1b1c6")

[node name="MenuBackground" type="Panel" parent="Desktop"]
layout_mode = 2
offset_left = 1.0
offset_top = -4.0
offset_right = 1281.0
offset_bottom = 34.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0vag3")

[node name="Trash" parent="Desktop" instance=ExtResource("5_0vag3")]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1149.0
offset_top = 578.0
offset_right = 1277.0
offset_bottom = 706.0
grow_horizontal = 0
grow_vertical = 2
hover_icon_file = "uid://feithyqiyd3"

[node name="Cookie" parent="Desktop" instance=ExtResource("4_7hnyc")]
layout_mode = 0
offset_left = 1208.0
offset_top = 274.0
offset_right = 1336.0
offset_bottom = 402.0
text = "Cookie.zip"
icon = ExtResource("14_sjly8")
file_contents = "Cookie cookie cookie"
file_size = 12.1
infected = true

[node name="GodotApplication" parent="Desktop" instance=ExtResource("5_euys8")]
layout_mode = 0
offset_left = 985.0
offset_top = 121.0
offset_right = 1113.0
offset_bottom = 249.0
icon = ExtResource("9_ijmkn")
vertical_icon_alignment = 0
file_size = 4.2

[node name="GodotApplication2" parent="Desktop" instance=ExtResource("5_euys8")]
layout_mode = 0
offset_left = 18.0
offset_top = 565.0
offset_right = 146.0
offset_bottom = 693.0
text = "aJ81.mov"
icon = ExtResource("10_ff102")
vertical_icon_alignment = 0
file_size = 8.2
infected = true

[node name="MisfileCrisisFolder" parent="Desktop" instance=ExtResource("8_euys8")]
layout_mode = 0
offset_left = 335.0
offset_top = 180.0
offset_right = 463.0
offset_bottom = 300.0
text = "Misfile Crisis"
icon = ExtResource("15_0pr33")
autowrap_mode = 0

[node name="ReadMe" parent="Desktop/MisfileCrisisFolder/Window/PanelContainer" index="0" instance=ExtResource("4_7hnyc")]
layout_mode = 0
offset_right = 120.0
offset_bottom = 120.0
text = "Read Me"
icon = ExtResource("7_2cq1c")
file_contents = "Run the Installer"

[node name="Installer" parent="Desktop/MisfileCrisisFolder/Window/PanelContainer" index="1" instance=ExtResource("12_k80li")]
layout_mode = 0
offset_left = 152.0
offset_top = 14.0
offset_right = 280.0
offset_bottom = 174.0
text = "Install Misfile Crisis"
icon = ExtResource("15_ff102")
autowrap_mode = 2
vertical_icon_alignment = 0

[node name="SystemFolder" parent="Desktop" instance=ExtResource("8_euys8")]
layout_mode = 0
offset_left = 28.0
offset_top = 88.0
offset_right = 156.0
offset_bottom = 216.0
text = "System"
icon = ExtResource("15_0pr33")

[node name="Window" parent="Desktop/SystemFolder" index="1"]
initial_position = 0
position = Vector2i(70, 90)

[node name="Document" parent="Desktop/SystemFolder/Window/PanelContainer" index="0" instance=ExtResource("4_7hnyc")]
layout_mode = 0
text = "Sounds"
icon = ExtResource("14_sjly8")
file_size = 4.5
infected = true

[node name="Applications" parent="Desktop" instance=ExtResource("8_euys8")]
layout_mode = 0
offset_left = 28.0
offset_top = 247.0
offset_right = 156.0
offset_bottom = 375.0
text = "Applications
"
icon = ExtResource("11_0i82s")
autowrap_mode = 0

[node name="Window" parent="Desktop/Applications" index="1"]
auto_translate_mode = 1
initial_position = 0
position = Vector2i(70, 90)

[node name="CalculatorApp" parent="Desktop/Applications/Window/PanelContainer" index="0" instance=ExtResource("5_euys8")]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
text = "Calculator"
icon = ExtResource("16_vv70r")
autowrap_mode = 0
vertical_icon_alignment = 0
file_size = 1.2

[node name="PaintApp" parent="Desktop/Applications/Window/PanelContainer" index="1" instance=ExtResource("5_euys8")]
layout_mode = 0
offset_top = 136.0
offset_right = 128.0
offset_bottom = 264.0
text = "Paint"
icon = ExtResource("17_ijmkn")
autowrap_mode = 0
vertical_icon_alignment = 0
file_size = 1.3

[node name="ArcadeApp" parent="Desktop/Applications/Window/PanelContainer" index="2" instance=ExtResource("5_euys8")]
layout_mode = 0
offset_left = 134.0
offset_top = 136.0
offset_right = 262.0
offset_bottom = 264.0
text = "Arcade"
icon = ExtResource("18_ijmkn")
autowrap_mode = 0
vertical_icon_alignment = 0
file_size = 2.1

[node name="CalendarApp" parent="Desktop/Applications/Window/PanelContainer" index="3" instance=ExtResource("5_euys8")]
layout_mode = 0
offset_left = 142.0
offset_right = 270.0
offset_bottom = 128.0
text = "Calendar
"
icon = ExtResource("17_pn3an")
autowrap_mode = 0
vertical_icon_alignment = 0
file_size = 0.8
infected = true

[node name="MenuBar" parent="." instance=ExtResource("9_jb3nm")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_right = 170.0
offset_bottom = 42.0

[node name="InfoWindow" parent="." instance=ExtResource("6_1b1c6")]
unique_name_in_owner = true
title = "Info"
initial_position = 2
size = Vector2i(640, 480)
visible = false

[node name="EmptyTrashDialog" parent="." instance=ExtResource("7_0vag3")]
unique_name_in_owner = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("8_k2s33")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://30qghlfcc1sv"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("9_8yfpd")

[node name="SoundEmptyTrash" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("14_ksk6k")
bus = &"SFX"

[node name="SoundStartup" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("18_aerqq")
bus = &"SFX"

[node name="SoundPopup" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("21_0i82s")
bus = &"SFX"

[node name="SoundItemAddedToTrash" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("15_3bxrh")
bus = &"SFX"

[node name="mouseclicks" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_f1j2c")
bus = &"SFX"

[node name="InstallWindow" parent="." instance=ExtResource("27_j6sx4")]
unique_name_in_owner = true
visible = false

[connection signal="gui_input" from="Desktop" to="Desktop" method="_on_gui_input"]
[connection signal="close_requested" from="InfoWindow" to="." method="_handle_close_info"]
[connection signal="canceled" from="EmptyTrashDialog" to="." method="_cancel_empty_trash"]
[connection signal="confirmed" from="EmptyTrashDialog" to="." method="_confirm_empty_trash"]
[connection signal="close_requested" from="InstallWindow" to="." method="_handle_close_installer"]

[editable path="Desktop/MisfileCrisisFolder"]
[editable path="Desktop/SystemFolder"]
[editable path="Desktop/Applications"]
[editable path="EmptyTrashDialog"]
